scanning for expirations

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -30,16 +30,30 @@
         </div>
       </div>
 
-      
-
+      <div class="row"> 
+      {{lengtharray}}
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Magnam nihil rerum aspernatur unde recusandae laboriosam pariatur veniam consequuntur molestiae nisi vero eius minima quas aliquam placeat ut, autem aperiam nobis.
+      </div>
+{{RLStartDate}}
+{{RLExpiryDate}}
+{{InsuranceExpiryDate}}
+{{VETExpiryDate}}
     </div>
+    <div class="progress md-progress" style="height: 20px">
+      <div class="progress-bar custom" role="progressbar" style="width:percentageForRTL" aria-valuenow="55%" aria-valuemin="0" aria-valuemax="100">25</div>
+  </div>
   </main>
 
+{{differentRsldate}}
 
 
     </div>
   </div>
 </div>
 
-
+<style>
+.custom{
+  
+}
+</style>
   
