--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -16,51 +16,44 @@
 
           <li class="nav-item"  style="background-color:black" routerLink="/dashboard">
             <a class="nav-link active" style="color:white" > 
-              <i class="fas fa-user"></i>Profile
+              <i class="fas fa-user"></i>profile
             </a>
           </li>
 
           <li class="nav-item" style="background-color:black" routerLink="/vehicle-register">
             <a class="nav-link active" style="color:white" >
-              <i class="fas fa-user"></i>Add vehicle
+              <i class="fas fa-user"></i>add vehicle
             </a>
           </li>
           
           <li class="nav-item" style="background-color:black" routerLink="/booking">
             <a class="nav-link"  style="color:white">
-            Reserve service date
+            reserve service date
             </a>
           </li>
 
           <li class="nav-item" style="background-color:black" routerLink="/license">
               <a class="nav-link"  style="color:white">
-               Add license and Insuarence details 
+               add license and insuarence details 
               </a>
             </li>
 
-            <li class="nav-item" style="background-color:black">
-                <a class="nav-link" href="#"  style="color:white">
-                 Promotions
-                </a>
-              </li>
+            <li class="nav-item" style="background-color:black" routerLink="/license">
+              <a class="nav-link"  style="color:white">
+               promotions
+              </a>
+            </li>
+            <li class="nav-item" style="background-color:black" routerLink="/license">
+              <a class="nav-link"  style="color:white">
+               contact us
+              </a>
+            </li>
+            <li class="nav-item" style="background-color:black" routerLink="/license">
+              <a class="nav-link"  style="color:white">
+               ongoing reservations
+              </a>
+            </li>
             
-              <li class="nav-item" style="background-color:black">
-                  <a class="nav-link" href="#"  style="color:white">
-                  Payment
-                  </a>
-                </li>
-
-                <li class="nav-item" style="background-color:black">
-                    <a class="nav-link" href="#"  style="color:white">
-                    Manage vehicles
-                    </a>
-                  </li>
-
-                  <li class="nav-item" style="background-color:black">
-                      <a class="nav-link" href="#"  style="color:white">
-                      Insuarence details
-                      </a>
-                    </li>
 
           
       
