--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -48,7 +48,7 @@
                contact us
               </a>
             </li>
-            <li class="nav-item" style="background-color:black" routerLink="/license">
+            <li class="nav-item" style="background-color:black" routerLink="/ongoingreserve">
               <a class="nav-link"  style="color:white">
                ongoing reservations
               </a>
