--- a/src/app/customerdashboard/booking/booking.component.html
+++ b/src/app/customerdashboard/booking/booking.component.html
@@ -30,6 +30,10 @@
               <div [hidden]="showunavailability"><p style="color:white;height:50px" class="bg-danger">we have got all the reservation slots reserved for today .feel free to try another date.sorry for
               the inconviniene</p></div>
               <br> 
+              <div>
+                <label for="" class="d-block p-2 bg-info text-white">contact number</label>
+               <input type="text" class="form-control" [(ngModel)]='tp' name="tp" id="resdate" >
+              </div>
             <div class="d-block p-2 bg-info text-white">Here are our car washing packages select one of the followings</div>
             
             <hr>
