changed ongoing reservation

--- a/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
+++ b/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
@@ -14,9 +14,9 @@
                 <div class="card-header bg-primary" style="color:white">
                     <h5 class="card-title"> <b>{{getremainingdays(emp.resdate)}} days more</b></h5>
                 </div>
-                <div class="card-body">
+                <div class="card-body" style="color:white;background-color: black">
                   <div class="row">
-                    <div class="col-md-4">
+                    <div class="col-md-4" >
                        
                         <p class="card-text">Reservation date :<b>{{emp.resdate}}</b> </p>
                          <input type="hidden">
