changes sidenav admin component

--- a/src/app/admindashboard/vehicle-assistance/vehicle-assistance.component.html
+++ b/src/app/admindashboard/vehicle-assistance/vehicle-assistance.component.html
@@ -1,3 +1,22 @@
-<p>
-  vehicle-assistance works!
-</p>
+
+<div class="container-fluid">
+  
+  <div class="row">
+    <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:1000px">
+    <app-sidenav-admin></app-sidenav-admin>
+    </div>
+  
+    <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
+    <div class="row" style="background-color:white;opacity:0.95;color:black;width:102.7%;height:800px">
+      <div class="" style="margin-left:50px;margin-top:50px">
+        
+      </div>
+    </div>
+
+
+
+    </div>
+</div>
+</div>
+
+
