--- a/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
+++ b/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
@@ -3,7 +3,7 @@
   <div class="container-fluid">
     <div class="row">
       <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:600px">
-      <app-sidenav></app-sidenav>
+      <app-sidenav-admin></app-sidenav-admin>
       </div>
     <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
      
