--- a/src/app/sidenav-admin/sidenav-admin.component.html
+++ b/src/app/sidenav-admin/sidenav-admin.component.html
@@ -20,15 +20,15 @@
           </a>
         </li>
 
-        <li class="nav-item" style="background-color:black" routerLink="/vehicle-register">
+        <li class="nav-item" style="background-color:black" routerLink="/confirmvehiclereg">
           <a class="nav-link active" style="color:white" >
             <i class="fas fa-user"></i>confirm vehicle registration
           </a>
         </li>
         
-        <li class="nav-item" style="background-color:black" routerLink="/booking">
+        <li class="nav-item" style="background-color:black" routerLink="/assistvehicles">
           <a class="nav-link"  style="color:white">
-          Reserve service date
+          vehicale breakdown requests
           </a>
         </li>
 
