--- a/src/app/admindashboard/confirmvehiclereg/confirmvehiclereg.component.html
+++ b/src/app/admindashboard/confirmvehiclereg/confirmvehiclereg.component.html
@@ -39,7 +39,7 @@
                   
                 </th>
                 <th>
-                  <img src={{emp.imgurl}}>
+                  <img src={{emp.imgurl}} style="height:300ps;width:300px">
                 </th>
                 <th>
                  <button (click)="onsubmit(emp.id)" type="button" class="btn btn-outline-success btn-sm">confirm reservation</button>
