--- a/src/app/admindashboard/vehicle-assistance/vehicle-assistance.component.html
+++ b/src/app/admindashboard/vehicle-assistance/vehicle-assistance.component.html
@@ -8,8 +8,62 @@
   
     <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
     <div class="row" style="background-color:white;opacity:0.95;color:black;width:102.7%;height:800px">
-      <div class="" style="margin-left:50px;margin-top:50px">
+      <div class="" style="margin-left:50px;margin-top:50px;width:100%" >
         
+      <div class="row">
+        
+        <div class="col-md-12">
+          <div class="container">
+            
+            <div class="messaging">
+                  <div class="inbox_msg">
+                    <div class="inbox_people">
+                      <div class="headind_srch">
+                        <div class="recent_heading">
+                          <h4>Recent</h4>
+                        </div>
+                        <div class="srch_bar">
+                          <div class="stylish-input-group">
+                            <input type="text" class="search-bar"  placeholder="Search" >
+                            <span class="input-group-addon">
+                            <button type="button"> <i class="fa fa-search" aria-hidden="true"></i> </button>
+                            </span> </div>
+                        </div>
+                      </div>
+                      <a href=""></a>
+                      <div class="inbox_chat">
+                        <div class="chat_list active_chat">
+                          <div class="chat_people">
+                            <div class="chat_img"> <img src="https://ptetutorials.com/images/user-profile.png" alt="sunil"> </div>
+                            <div class="chat_ib">
+                              <h5>Sunil Rajput <span class="chat_date">Dec 25</span></h5>
+                              <p>Test, which is a new approach to have all solutions 
+                                astrology under one roof.</p>
+                            </div>
+                            <br>
+                            <br>
+                                  <button class="btn btn-info btn-xs" style="text-align:right ;">show location</button>
+                                  <button class="btn btn-success btn-xs" style="text-align:right;margin-left:5px " >handled</button>
+                            </div>
+                        </div>
+                        
+                        
+                        
+                        
+                      </div>
+                    </div>
+                    <div class="mesgs">
+                        <agm-map [latitude]="lat" [longitude]="lng" [zoom]="10">
+                            <agm-marker [latitude]="lat" [longitude]="lng" [label]="'M'">
+                              </agm-marker>
+                            <agm-direction [origin]="origin" [destination]="destination">
+                            </agm-direction>
+                          </agm-map>
+                    </div>
+                  </div>
+            </div>
+        </div>
+        </div>
       </div>
     </div>
 
@@ -20,3 +74,8 @@
 </div>
 
 
+<style>
+agm-map {
+  height: 550px;
+}
+</style>
