--- a/src/app/sidenav-admin/sidenav-admin.component.html
+++ b/src/app/sidenav-admin/sidenav-admin.component.html
@@ -32,14 +32,14 @@
           </a>
         </li>
 
-        <li class="nav-item" style="background-color:black">
-            <a class="nav-link" href="#"  style="color:white">
-             Scan 
+        <li class="nav-item" style="background-color:black" routerLink="/qr-generator">
+            <a class="nav-link"  style="color:white">
+             generate qr codes
             </a>
           </li>
 
           <li class="nav-item" style="background-color:black">
-              <a class="nav-link" href="#"  style="color:white">
+              <a class="nav-link"   style="color:white">
                Promotions
               </a>
             </li>
