--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,6 @@
 <app-navbar></app-navbar>
 
 <router-outlet></router-outlet>
+<script type="text/javascript" src="angular.js"></script>
+<script type="text/javascript" src="simple-web-notification/web-notification.js"></script>
+<script type="text/javascript" src="angular-web-notification.js"></script>
