push notification changed

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,5 +1,5 @@
 <app-navbar></app-navbar>
-
+<app-pushnotification></app-pushnotification>
 <router-outlet></router-outlet>
 <script type="text/javascript" src="angular.js"></script>
 <script type="text/javascript" src="simple-web-notification/web-notification.js"></script>
