--- a/src/app/navbar/navbar.component.html
+++ b/src/app/navbar/navbar.component.html
@@ -1,5 +1,5 @@
 <!--Navbar-->
-<nav class="navbar navbar-expand-lg navbar-dark " style="background-color:black">
+<nav class="navbar navbar-expand-lg navbar-dark " style="background-color:rgb(8, 3, 31)">
 
   <!-- Navbar brand -->
   <!-- <div style="padding:0px">
