--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -1,10 +1,15 @@
 <div class="pimag1"  style="background-image: url('../../assets/image/image1.jpeg');
-min-height:600px   ; position: relative; opacity: 0.70; background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
-  <div class="ptext" style="position: absolute; top: 50%; width: 100%; 
+min-height:600px   ; position: relative;  background-position: center; background-size: cover; background-repeat: no-repeat; background-attachment: fixed;">
+  <div class="ptext" style="position: absolute; top: 30%; width: 100%; 
   text-align: center; color: #000; font-size: 27px; letter-spacing:8px;text-transform: uppercase;">
+    
+    <br>
     <span class="border" style = "background-color:#111; color:#fff; padding:20px;">
       Luckvin Auto Care Service
     </span>
+    <div>
+      <img src="../../assets/image/g.png" alt="">
+    </div>
   </div>
 </div>
 
