--- a/src/app/admindashboard/payementupdate/payementupdate.component.html
+++ b/src/app/admindashboard/payementupdate/payementupdate.component.html
@@ -2,7 +2,7 @@
 <div class="container-fluid">
   
   <div class="row">
-    <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:1000px">
+    <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:1500px">
     <app-sidenav-admin></app-sidenav-admin>
     </div>
   
@@ -22,14 +22,14 @@
                 <option value="Medium Rigid (MR class) heavy vehicle">Medium Rigid (MR class) heavy vehicle</option>
                 <option value="Special tractor ">tractor</option>
               </select>
-             
+             {{vehicleselect}}
             </div>
           </form>
         </div>
         <form action="" class="form-group" autocomplete="on" #form="ngForm"  (submit)="onSubmit(form)">
           <div class="row">
             <div class="col-md-6"><label for="">Quick wash package:</label></div>
-            <div class="col-md-6"><input type="number" class="form-control" style="width:300px" placeholder="LKR" name="quickwash"  [(ngModel)]='quickwash'></div>
+            <div class="col-md-6"><input type="number" class="form-control" style="width:300px" placeholder="LKR" name="quickwash"  [(ngModel)]='quickwash' ></div>
           </div>
           <hr>
           <div class="row">
@@ -86,7 +86,10 @@
             <div class="col-md-6"><label for="">Engine cleaning:</label></div>
             <div class="col-md-6"><input type="number" class="form-control" style="width:300px" placeholder="LKR" name="engineclean"  [(ngModel)]='engineclean'></div>
           </div>
-
+          <div class="row">
+            
+            <div class="col-md-6"><input type="hidden" class="form-control" style="width:300px" placeholder="LKR" name="engineclean"  [(ngModel)]='identifier'></div>
+          </div>
           <hr>
           <div class="row">
             <div class="col-md-6"><label for="">tyre dressing:</label></div>
