retriev vehicle type

--- a/src/app/customerdashboard/booking/booking.component.html
+++ b/src/app/customerdashboard/booking/booking.component.html
@@ -16,7 +16,7 @@
              
             <div>
               <label for="" class="d-block p-2 bg-info text-white">select the vehicle</label>
-             <select  id="vehiclereg" class="form-control"  name="vehiclereg"  [(ngModel)]='vehiclereg' >
+             <select  id="vehiclereg" class="form-control"  name="vehiclereg"  [(ngModel)]='vehiclereg'  (ngModelChange)="selectvehicletype()">
                <option value="{{vehicle.Reg_no}}" *ngFor="let vehicle of vehicle$ | async ">{{vehicle.Reg_no}}</option>
              </select>
             </div>
