changed dshboard ui

--- a/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
+++ b/src/app/customerdashboard/ongoing-reservations/ongoing-reservations.component.html
@@ -7,7 +7,7 @@
       </div>
     <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
      
-      <div class="row" style="background-color:white;opacity:0.95;color:black;height:1000px">
+      <div class="row" style="background-color:white;opacity:0.95;color:black;height:100%">
        <div >
          <div  style="margin-top: 50px;margin-left:50px">
             <div class="card" *ngFor="let emp of list" style="margin-top:10px;width:800px;">
