--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -2,7 +2,7 @@
   <!-- Sidebar navigation -->
   <div class="container-fluid">
     <div class="row">
-      <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:600px">
+      <div class="col-md-2" style="background-color:rgb(2, 12, 22);height:auto">
       <app-sidenav></app-sidenav>
       </div>
     <div class="col-md-10">
