--- a/src/app/servicestation/generateqr/generateqr.component.html
+++ b/src/app/servicestation/generateqr/generateqr.component.html
@@ -11,17 +11,20 @@
     </div>
   
     <div class="col-md-10" style="background-image:url('../assets/image/g.png');background-repeat:no-repeat;">
-    <div class="row" style="background-color:white;opacity:0.95;color:black;width:102.7%;height:800px">
+    <div class="row" style="background-color:white;opacity:0.95;color:black;width:102.7%;height:1000px;margin-top:20px">
       <div class="container ">
         <div class="row">
-          <div class="col-md-8">
-            <div class="container card border border-success" style="height:350px;padding:40px" id="obrz">
+          <div class="col-md-4">
+            <div class="container card border border-success" style="height:350px;" id="obrz">
               <div class="row ">
-                <div class="col-md-6"> 
+                <div class="col-md-12"> 
+                  <p><b>Luckvin Auto Care Services</b></p>
+                  <p>tel:0712244558</p>
+                
                   <qrcode [qrdata]="qrdata" [size]="256" [level]="'M'" ></qrcode>
                   <p [(ngModel)]="qrdata"></p>
                 </div>
-                <div class="col-md-6" style="padding-top:20px">
+                <!-- <div class="col-md-12" style="padding-top:20px">
                     <h3 style="color:blue ">LUCKVIN AUTO CARE SERVICES</h3>
                     <br>
                     <p><b>Luckvin auto care SERVICES<br>
@@ -30,7 +33,7 @@
                    telephone :07542125454<br>
                   email:luckvinautocare@gmail.com
                  </b>
-                 </p></div>
+                 </p></div> -->
                
                 
                
