--- a/src/app/sidenav-admin/sidenav-admin.component.html
+++ b/src/app/sidenav-admin/sidenav-admin.component.html
@@ -38,29 +38,21 @@
             </a>
           </li>
 
-          <li class="nav-item" style="background-color:black">
-              <a class="nav-link"   style="color:white">
-               Promotions
-              </a>
-            </li>
+         
           
             <li class="nav-item" style="background-color:black">
                 <a class="nav-link" href="#"  style="color:white">
-                Payment
+                generate invoice
                 </a>
               </li>
 
-              <li class="nav-item" style="background-color:black">
-                  <a class="nav-link" href="#"  style="color:white">
-                  Manage vehicles
+              <li class="nav-item" style="background-color:black" routerLink="/qr-scanner">
+                  <a class="nav-link"   style="color:white">
+                  qr scanner
                   </a>
                 </li>
 
-                <li class="nav-item" style="background-color:black">
-                    <a class="nav-link" href="#"  style="color:white">
-                    Insuarence details
-                    </a>
-                  </li>
+               
 
         
     
