--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -7,7 +7,7 @@ min-height:600px   ; position: relative;  background-position: center; backgroun
     <span class="border" style = "background-color:#111; color:#fff; padding:20px;">
       Luckvin Auto Care Service
     </span>
-    <div>
+    <div style="margin-top:50px">
       <img src="../../assets/image/g.png" alt="">
     </div>
   </div>
