--- a/src/app/admindashboard/confirmvehiclereg/confirmvehiclereg.component.html
+++ b/src/app/admindashboard/confirmvehiclereg/confirmvehiclereg.component.html
@@ -43,6 +43,8 @@
                 </th>
                 <th>
                  <button (click)="onsubmit(emp.id)" type="button" class="btn btn-outline-success btn-sm">confirm reservation</button>
+                 <br>
+                 <button (click)="onIgnore(emp.id)" type="button" class="btn btn-outline-danger btn-sm">Reject reservation</button>
                 </th>
               </tr>
               
