--- a/src/app/homepage/homepage.component.html
+++ b/src/app/homepage/homepage.component.html
@@ -52,22 +52,24 @@ min-height: 400px; position: relative; opacity: 0.70; background-position: cente
     <div class="ptext" style="position: absolute; top: 50%; width: 100%; 
     text-align: center; color: #000; font-size: 27px; letter-spacing:8px;text-transform: uppercase;">
       <span class="border trans" style = "background-color:#111; color:#fff; padding:20px; background-color:transparent;">
-        Image Text 2
+        JOIN WITH US
       </span>
     </div>
   
 </div>
 
 <section class="section section-Dark" style="text-align: center; padding: 50px 80px; background-color: #282e34;color:#ddd;">
-      <h2>Section Two</h2>
-      <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore officia dolor excepturi tenetur non necessitatibus ex expedita nihil earum enim beatae odit vero et adipisci eligendi cupiditate ipsum corrupti ratione, rem dolore. Assumenda, pariatur accusamus numquam, necessitatibus vero maxime ipsum aperiam quasi minima sapiente ipsam. Iusto sint aspernatur voluptates molestias, enim, laborum inventore ea ab porro dolorum quisquam nam dignissimos illo, cum repellat eligendi eius rerum aliquid quae saepe iure similique ipsa accusamus.  </p>
+      <h2>About Us</h2>
+      <p>Luckvin Auto Care is focused on providing a high-quality personalised service, my business was born out of a love for cars and bikes, not a desire to make money from them!
+ 
+        With 19 years experience in the motor trade I specialise in vehicle service, repairs, fault diagnosis and selling quality vehicles, classics, American, but also everyday vehicles. Cars and bikes held in stock and located to order.</p>
    </section>
 
 <div class="pimag3" style="background-image: url('../../assets/image/image3.jpeg');height: 400px; position: relative; opacity: 0.70; background-position: center; background-size: cover; background-repeat: no-repeat;background-attachment: fixed;">
     <div class="ptext" style="position: absolute; top: 50%; width: 100%; 
     text-align: center; color: #000; font-size: 27px; letter-spacing:8px;text-transform: uppercase;">
         <span class="border trans" style = "background-color:#111; color:#fff; padding:20px;background-color:transparent;">
-            Image Text 3
+            HIGH QUALITY SERVICE
         </span>
     </div>
 </div>
