--- a/src/app/verify-email/verify-email.component.html
+++ b/src/app/verify-email/verify-email.component.html
@@ -4,14 +4,14 @@
       <div class="authBlock">
         <h3>Thank You for Registering</h3>
   
-        <div class="formGroup" *ngIf="authService.userData as user">
+        <div class="form-group" *ngIf="authService.userData as user">
           <p class="text-center">We have sent a confirmation email to <strong>{{user.email}}</strong>.</p>
           <p class="text-center">Please check your email and click on the link to verfiy your email address.</p>
         </div>
         
         <!-- Calling SendVerificationMail() method using authService Api -->
-        <div class="formGroup">
-          <button type="button" class="btn btnPrimary" (click)="authService.SendVerificationMail()">
+        <div class="form-group" style="margin-left:550px">
+          <button type="button" class="btn btn-primary" (click)="authService.SendVerificationMail()">
             <i class="fas fa-redo-alt"></i>
             Resend Verification Email
           </button>
@@ -19,7 +19,7 @@
   
       </div>
   
-      <div class="redirectToLogin">
+      <div class="redirectToLogin" style="margin-left:600px">
         <span>Go back to?<span class="redirect" routerLink="/sign-in"> Sign in</span></span>
       </div>
   
