--- a/src/app/qrscanner/qrscanner.component.html
+++ b/src/app/qrscanner/qrscanner.component.html
@@ -56,6 +56,14 @@
         
         <div class="{{service.interior}} " >Interior services  </div>
 
+        <h3>Lubricants</h3>
+        Engineoil
+        <div class="true" > {{service.lubricants}}  </div>
+        Lubricant
+        <div class="true" >{{service.engineoil}}  </div>
+        
+
+
        
         </div>
         
