--- a/src/app/sidenav-admin/sidenav-admin.component.html
+++ b/src/app/sidenav-admin/sidenav-admin.component.html
@@ -40,8 +40,8 @@
 
          
           
-            <li class="nav-item" style="background-color:black">
-                <a class="nav-link" href="#"  style="color:white">
+            <li class="nav-item" style="background-color:black" routerLink="/invoice">
+                <a class="nav-link"  style="color:white">
                 generate invoice
                 </a>
               </li>
