--- a/src/app/sidenav/sidenav.component.html
+++ b/src/app/sidenav/sidenav.component.html
@@ -38,14 +38,10 @@
               </a>
             </li>
 
-            <li class="nav-item" style="background-color:black" routerLink="/license">
+           
+            <li class="nav-item" style="background-color:black" routerLink="/history">
               <a class="nav-link"  style="color:white">
-               promotions
-              </a>
-            </li>
-            <li class="nav-item" style="background-color:black" routerLink="/license">
-              <a class="nav-link"  style="color:white">
-               contact us
+               history
               </a>
             </li>
             <li class="nav-item" style="background-color:black" routerLink="/ongoingreserve">
